--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,10 @@
 name: GitHub CI
-on: [push]
-
+on:
+  push:
+    tags:
+      - 0.*
+  workflow_dispatch:
+  
 concurrency: 
   group: ${{ github.ref }}-${{ github.workflow }}
   cancel-in-progress: true
